2015-11-30 Michele Pinamonti <michele.pinamonti@gmail.com>
        * StatOnly flag added (to "Fit" for the moment - actually it affects also Limit... To fix)

2015-11-25 - Loic Valery <lvalery@cern.ch>
        * Adding protection against initial numbers in names. Leads to crash if present (https://its.cern.ch/jira/browse/TTHFITTER-7)

2015-11-25 Loic Valery <lvalery@cern.ch>
        * Adding the partial blinding for fit, limits and significance

2015-11-13 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Some functionalities added for individual sample scaling and to ignore selection
        * README: updated
        * config files moved to new config/ directory
        
2015-11-11 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fix by Arthur for more than one NtupleFiles (avoid problems when spaces are in between the ",")
        * Fix by Thomas for crash on FittingTool with stat only
        
2015-11-06 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Support for more than one Signal (still only 1 POI)
        
2015-11-05 Loic Valery <lvalery@cern.ch>
        * Fixes POI range in fitting tool

2015-10-28 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit: add protection for no syst case when entering pruning plotting method
        
2015-10-22 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit: add possibiliy of Selection for Sample
        
2015-10-21 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit, Common, SampleHist: HistoCheckCrash flag moved to Common (TtHFitter::HISTOCHECKCRAS) -> correctly propagated to SampleHist
        * TtHFit: Fit method: Asimov used if no data
        * TtHFit: Fix: no smooth method called if no smooth and symmetrization set for syst
        * HistoTools: if no crash, negative syst hist bins set to 1e-06
        * Smone cleaning of outdated files
        
2015-10-20 Michele Pinamonti <michele.pinamonti@gmail.com>