@@ -16,8 +16,8 @@ Job: "ttH2015"
   PlotOptions: "YIELDS"
   NtupleName: "nominal"
   DebugLevel: 0
-  MCstatThreshold: 0.10
-  SystControlPlots: TRUE
+%   MCstatThreshold: 0.10
+%   SystControlPlots: TRUE
   SystPruningShape: 0.01
   SystPruningNorm: 0.01
 %   CorrelationThreshold: 0.20
@@ -34,7 +34,7 @@ Fit: "fit"
   FitRegion: CRSR
 %   StatOnly: TRUE
 %   FitBlind: TRUE
-%   StatOnly: TRUE
+  StatOnly: TRUE
 
 % --------------- %
 % ---  LIMIT    --- %
